tests/errors/comprehensive/E12001_map_requires_map.ez
/*
 * Error Test: E12001 - map-requires-map
 * Expected: "requires a map argument"
 */

import @maps

do main() {
    temp arr [int] = {1, 2, 3}
    temp keys [int] = maps.keys(arr)  // Passing array to map function
}
